--- a/name/WindowsFormsApplicationFishes/Properties/Resources.resx
+++ b/name/WindowsFormsApplicationFishes/Properties/Resources.resx
@@ -118,199 +118,13 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="bubble_pop_frame_01" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\bubble_pop_frame_01.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="BigFish1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\BigFish1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="bubble_pop_frame_02" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\bubble_pop_frame_02.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="MediumFish1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\MediumFish1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="bubble_pop_frame_03" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\bubble_pop_frame_03.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="bubble_pop_frame_04" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\bubble_pop_frame_04.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="bubble_pop_frame_05" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\bubble_pop_frame_05.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="bubble_pop_frame_06" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\bubble_pop_frame_06.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="bubble_pop_frame_07" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\bubble_pop_frame_07.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="bubble_pop_one_spritesheet_512px_by_512px_per_frame" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\bubble_pop_one_spritesheet_512px_by_512px_per_frame.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="bubble_pop_under_water_01" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\bubble_pop_under_water_01.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="bubble_pop_under_water_02" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\bubble_pop_under_water_02.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="bubble_pop_under_water_03" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\bubble_pop_under_water_03.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="bubble_pop_under_water_04" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\bubble_pop_under_water_04.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="bubble_pop_under_water_05" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\bubble_pop_under_water_05.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="bubble_pop_under_water_06" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\bubble_pop_under_water_06.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="bubble_pop_under_water_07" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\bubble_pop_under_water_07.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="bubble_pop_under_water_08" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\bubble_pop_under_water_08.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="bubble_pop_under_water_spritesheet" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\bubble_pop_under_water_spritesheet.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="buble_pop_two_01" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\buble_pop_two_01.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="buble_pop_two_02" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\buble_pop_two_02.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="buble_pop_two_03" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\buble_pop_two_03.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="buble_pop_two_04" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\buble_pop_two_04.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="buble_pop_two_05" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\buble_pop_two_05.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="buble_pop_two_06" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\buble_pop_two_06.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="buble_pop_two_07" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\buble_pop_two_07.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="buble_pop_two_spritesheet_512px_by512px_per_frame" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\buble_pop_two_spritesheet_512px_by512px_per_frame.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Рибки_01" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Рибки-01.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Рибки_02" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Рибки-02.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Рибки_03" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Рибки-03.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Рибки_04" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Рибки-04.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Рибки_05" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Рибки-05.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Рибки_06" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Рибки-06.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Рибки_07" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Рибки-07.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Рибки_08" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Рибки-08.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Рибки_09" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Рибки-09.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Рибки_10" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Рибки-10.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Рибки_11" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Рибки-11.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Рибки_12" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Рибки-12.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Рибки_13" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Рибки-13.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Рибки_14" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Рибки-14.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Рибки_15" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Рибки-15.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Рибки_16" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Рибки-16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Рибки_17" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Рибки-17.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Рибки_18" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Рибки-18.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Рибки_19" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Рибки-19.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Рибки_20" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Рибки-20.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Рибки_21" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Рибки-21.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Рибки_22" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Рибки-22.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Рибки_23" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Рибки-23.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Рибки_24" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Рибки-24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Рибки_25" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Рибки-25.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Рибки_26" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Рибки-26.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Рибки_27" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Рибки-27.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Рибки_28" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Рибки-28.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Рибки_29" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Рибки-29.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Рибки_30" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Рибки-30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Рибки_31" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Рибки-31.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Рибки_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Рибки-32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Рибки_33" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Рибки-33.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Рибки_34" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Рибки-34.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Рибки_35" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Рибки-35.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Рибки_36" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Рибки-36.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Рибки_37" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Рибки-37.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Рибки_38" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Рибки-38.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Рибки_39" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Рибки-39.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Рибки_40" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Рибки-40.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="SmallFish1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\SmallFish1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
