--- a/name/WindowsFormsApplicationFishes/Properties/Resources.resx
+++ b/name/WindowsFormsApplicationFishes/Properties/Resources.resx
@@ -121,6 +121,9 @@
   <data name="BigFish1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\BigFish1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Field" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Field.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="MediumFish1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\MediumFish1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
